--- a/css/style.css
+++ b/css/style.css
@@ -10,23 +10,24 @@ body {
   font-family: 'Lato', serif;
   color: #343434;
   -webkit-font-smoothing: antialiased;
-  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
 }
 
 .wrapper {
   width: 80%;
   margin: 0 auto;
   max-width: 1000px;
+  background-color: white;
 }
 
 p {
-  color:dimgray;
+  color: dimgray;
   line-height: 1.8em;
 }
 
 section {
-  box-shadow: 0px -10px 5px rgba(0,0,0,0.3);
-  position:relative;
+  box-shadow: 0px -10px 5px rgba(0, 0, 0, 0.3);
+  position: relative;
   z-index: 2;
 }
 
@@ -37,7 +38,7 @@ section {
   padding: 10px 20px;
   border: solid 2px #ff3333;
   text-decoration: none;
-  background-color:white;
+  background-color: white;
   outline: none;
 }
 
@@ -100,11 +101,11 @@ header {
   display: flex;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   margin-bottom: 40px;
-  position:relative;
-  z-index:100;
+  position: relative;
+  z-index: 100;
   -webkit-transition: .4s ease-in-out;
   transition: .4s ease-in-out;
 }
@@ -115,28 +116,28 @@ header {
 }
 
 .headlogo {
-  display:-webkit-box;
-  display:-webkit-flex;
-  display:-ms-flexbox;
-  display:flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 #logo {
-  font-size:3em;
+  font-size: 3em;
   padding: 0 10px;
-  height:1.4em;
+  height: 1.4em;
   margin-top: -10px;
 }
 
 #shae {
   font-weight: 700;
   color: #343434;
-  margin:0;
+  margin: 0;
   display: inline;
   padding: 0;
   height: 2em;
@@ -145,6 +146,7 @@ header {
 .pipe {
   font-weight: 400;
   color: #ff3333;
+  margin: 0 -6px 0 4px;
 }
 
 #scotten {
@@ -156,22 +158,16 @@ header {
 }
 
 .subtitle p {
-  font-size:1.2em;
+  font-size: 1.2em;
   padding: 0 0 0 10px;
   color: #343434;
   margin: 0;
 }
 
 
-
-
-
-
-
 /********************************************
 NAVIGATION
 ********************************************/
-
 
 nav {
   margin: 0 15px 0 0;
@@ -185,12 +181,12 @@ nav {
 
 header ul {
   list-style: none;
-  display:-webkit-box;
-  display:-webkit-flex;
-  display:-ms-flexbox;
-  display:flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   font-size: 1.2em;
-  margin:15px 0;
+  margin: 15px 0;
 }
 
 header ul a {
@@ -209,21 +205,18 @@ header ul li:hover {
 .navfa {
   display: block;
   text-align: center;
+  font-size: 1.2em;
 }
-
-
-
 
 
 /********************************************
 LANDING
 ********************************************/
 
-
 #landing-page {
   width: 100%;
-  padding:0;
-  margin:0;
+  padding: 0;
+  margin: 0;
 }
 
 .maintitle {
@@ -231,12 +224,12 @@ LANDING
 }
 
 .maintitle h1 {
-  margin:0;
+  margin: 0;
   font-size: 4em;
 }
 
 .maintitle h2 {
-  margin:0;
+  margin: 0;
   font-size: 2em;
 }
 
@@ -244,24 +237,20 @@ LANDING
   width: 100%;
   margin: 0 auto;
   text-align: center;
-  padding:0;
+  padding: 0;
 }
 
 .homepic img {
-  width:50%;
+  width: 50%;
   margin: 0 auto -5px;
   max-width: 800px;
+  position: relative;
 }
-
-
-
-
 
 
 /********************************************
 WORK
 ********************************************/
-
 
 #work h2 {
   font-size: 3em;
@@ -273,19 +262,19 @@ WORK
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  width:100%;
+  width: 100%;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   padding: 30px 0;
   -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
 .right {
@@ -293,24 +282,24 @@ WORK
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  width:100%;
+  width: 100%;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: reverse;
   -webkit-flex-direction: row-reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
+  -ms-flex-direction: row-reverse;
+  flex-direction: row-reverse;
   padding: 30px 0;
   -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
 .left .info {
@@ -320,11 +309,11 @@ WORK
 
 .right .info {
   padding: 0 0 0 50px;
-  width:50%;
+  width: 50%;
 }
 
-.picture  {
-  width:50%;
+.picture {
+  width: 50%;
 }
 
 .picture img {
@@ -348,23 +337,23 @@ WORK
 .info i {
   font-size: 2em;
   padding: 0 8px 0 0;
-  vertical-align:middle;
+  vertical-align: middle;
 }
 
 .info ul {
   color: dimgray;
   list-style: none;
-  padding:0;
+  padding: 0;
   -moz-column-count: 2;
   -moz-column-gap: 20px;
   -webkit-column-count: 2;
   -webkit-column-gap: 20px;
   -webkit-column-count: 2;
-     -moz-column-count: 2;
-          column-count: 2;
+  -moz-column-count: 2;
+  column-count: 2;
   -webkit-column-gap: 20px;
-     -moz-column-gap: 20px;
-          column-gap: 20px;
+  -moz-column-gap: 20px;
+  column-gap: 20px;
 }
 
 .info ul li {
@@ -376,13 +365,9 @@ WORK
 }
 
 
-
-
-
 /********************************************
 ABOUT
 ********************************************/
-
 
 #about {
   text-align: center;
@@ -391,8 +376,8 @@ ABOUT
 
 #about img {
   border-radius: 100px;
-  width:200px;
-  height:200px;
+  width: 200px;
+  height: 200px;
   border: 6px solid #d3d3d3;
 }
 
@@ -407,23 +392,23 @@ ABOUT
   display: flex;
   text-align: left;
   -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
 .profinfo {
   padding: 0 90px 0 0;
   -webkit-box-flex: 2;
   -webkit-flex: 2;
-      -ms-flex: 2;
-          flex: 2;
+  -ms-flex: 2;
+  flex: 2;
 }
 
 .persinfo {
-  -webkit-box-flex:1;
-  -webkit-flex:1;
-      -ms-flex:1;
-          flex:1;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
 }
 
 #about h2 {
@@ -433,11 +418,9 @@ ABOUT
 }
 
 
-
 /********************************************
 SKILLS
 ********************************************/
-
 
 .skillchart {
   padding: 60px 0;
@@ -446,29 +429,29 @@ SKILLS
   display: -ms-flexbox;
   display: flex;
   -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   max-width: 1400px;
   margin: 0 auto;
 }
 
 .flexchart {
-  display:-webkit-box;
-  display:-webkit-flex;
-  display:-ms-flexbox;
-  display:flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   text-align: center;
   color: #ededed;
-  width:300px;
+  width: 300px;
 }
 
 .skilldesc {
@@ -478,45 +461,61 @@ SKILLS
 }
 
 .skilldesc p {
-  margin:0;
+  margin: 0;
   line-height: 2em;
-  color:#f0f0f0;
+  color: #f0f0f0;
   font-size: 1.2em;
 }
-
-
-
-
 
 
 /********************************************
 CONTACT
 ********************************************/
 
+.social {
+  font-size: 2.5em;
+  text-decoration: none;
+  color: #f0f0f0;
+  -webkit-transition: .2s ease-in-out;
+  transition: .2s ease-in-out;
+}
+
+.social:hover {
+  color: #dedede;
+}
+
+.socialdiv {
+  margin: 0 0 25px;
+}
+
+.fa-github {
+  margin-left: 20px;
+}
 
 .colorwrap {
   background: url("../img/map.png");
-  background-size:800px;
-  background-repeat:repeat;
+  background-size: 800px;
+  background-repeat: repeat;
   background-color: #2e2e2e;
-  width:100%;
+  width: 100%;
 }
+
 .wrappergrey {
   width: 80%;
   margin: 0 auto;
   max-width: 1200px;
-  color:#f0f0f0;
+  color: #f0f0f0;
 }
 
 .contact h3 {
-  margin:0;
+  margin: 0;
   font-size: 2em;
 }
 
 .contact p {
-  margin:0;
+  margin: 0;
   line-height: 2em;
-  color:#f0f0f0;
+  color: #f0f0f0;
   font-size: 1.2em;
   padding: 20px 0;
 }
@@ -529,41 +528,41 @@ CONTACT
   display: flex;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
-  width:100%;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 .contacttext {
   padding: 0 80px 0 0;
-  width:50%;
+  width: 50%;
 }
 
 .contactform {
-  width:50%;
+  width: 50%;
 }
 
 .form {
-  display:-webkit-box;
-  display:-webkit-flex;
-  display:-ms-flexbox;
-  display:flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   margin-bottom: 10px;
   max-width: 100%;
 }
 
 .contactform form input {
-  font-size:1.5em;
-  padding:5px;
-  outline:none;
+  font-size: 1.5em;
+  padding: 5px;
+  outline: none;
   background-color: transparent;
   border: none;
   border-bottom: 2px solid white;
@@ -576,11 +575,11 @@ CONTACT
 }
 
 .contactform form textarea {
-  font-size:1.5em;
-  padding:5px;
-  outline:none;
+  font-size: 1.5em;
+  padding: 5px;
+  outline: none;
   background-color: transparent;
-  border:none;
+  border: none;
   border-left: 1px solid #8e8e8e;
   border-right: 1px solid #8e8e8e;
   border-bottom: 2px solid white;
@@ -596,19 +595,28 @@ CONTACT
 }
 
 .contactform form label {
-  padding:5px;
+  padding: 5px;
 }
 
 #formbtn {
   border: none;
-  float:right;
+  float: right;
   padding-left: 40px;
   padding-right: 40px;
 }
 
 .btnmsg {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -623,238 +631,182 @@ CONTACT
 }
 
 input:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0 100px #e2e2e2 inset;
+  -webkit-box-shadow: 0 0 0 100px #e2e2e2 inset;
 }
 
 
-
-  
-  
 /********************************************
 MEDIA QUERIES 768
 ********************************************/
 
-
 @media screen and (max-width:48em) {
-  
-  
-  
   #logo {
-    font-size:2.5em;
+    font-size: 2.5em;
     padding: 0 7px;
   }
-  
   header ul li:hover {
-  padding: 0px 10px;
+    padding: 0px 10px;
   }
-  
-  .fa {
-    display: none; 
+  .navfa {
+    display: none;
   }
-  
   header ul li {
-  padding: 0px 10px;
+    padding: 0px 10px;
   }
-  
   .titledivider {
-    background-size: 500px; 
+    background-size: 500px;
   }
-  
   nav {
     padding: 10px 0;
   }
-  
   .subtitle p {
-    display:none; 
+    display: none;
   }
-  
   .wrapper {
     width: 85%;
   }
-  
   .wrappergrey {
     width: 85%;
   }
-
   .titledivider h2 {
     font-size: 2em;
     padding: 45px;
   }
-  
   header {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -webkit-box-pack: center;
     -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     text-align: center;
     -webkit-box-align: center;
     -webkit-align-items: center;
-        -ms-flex-align: center;
-                -ms-grid-row-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    -ms-grid-row-align: center;
+    align-items: center;
   }
-  
   nav {
-    margin: 0 auto; 
+    margin: 0 auto;
     text-align: center;
   }
-  
   header ul {
-    padding-left:0; 
+    padding-left: 0;
     text-align: center;
     margin: 0 auto;
   }
-  
   .aboutinfo {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column; 
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
-  
   .profinfo {
-    padding:0; 
+    padding: 0;
   }
-  
   .maintitle h1 {
     font-size: 3.5em;
   }
-
   .maintitle h2 {
     font-size: 1.6em;
   }
-  
   .skilldesc {
     width: 75%;
     padding-top: 40px;
   }
-  
   .flexchart {
-    width:220px;
+    width: 220px;
   }
-  
   .left {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
-
   .right {
-    -webkit-box-orient:vertical;
-    -webkit-box-direction:normal;
-    -webkit-flex-direction:column;
-        -ms-flex-direction:column;
-            flex-direction:column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
-  
   .left .info {
-  padding: 0;
-  width:100%;
-}
-
-.right .info {
-  padding: 0;
-  width:100%;
-}
-
-.picture  {
-  width:100%;
-}
-  
-.contact {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-  
-.contacttext {
-  padding: 0;
-  width:100%;
-}
-
-.contactform {
-  width:100%;
-}
-  
-  section {
-  box-shadow: 0px -7px 4px rgba(0,0,0,0.3);
+    padding: 0;
+    width: 100%;
   }
-  
-  
-  
+  .right .info {
+    padding: 0;
+    width: 100%;
+  }
+  .picture {
+    width: 100%;
+  }
+  .contact {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+  .contacttext {
+    padding: 0;
+    width: 100%;
+  }
+  .contactform {
+    width: 100%;
+  }
+  section {
+    box-shadow: 0px -7px 4px rgba(0, 0, 0, 0.3);
+  }
 }
-
 
 
 /********************************************
 MEDIA QUERIES 460
 ********************************************/
 
-
-
-
 @media screen and (max-width:30em) {
-  
-  
   nav {
-    padding: 3px 0; 
+    padding: 3px 0;
   }
-  
   #logo {
-    font-size:2.0em;
+    font-size: 2.0em;
     padding: 0 5px;
   }
-  
   .wrapper {
     width: 90%;
   }
-  
   .wrappergrey {
     width: 90%;
   }
-  
   .titledivider h2 {
     font-size: 1.8em;
     padding: 30px;
   }
-  
   .maintitle h1 {
     font-size: 3em;
   }
-
   .maintitle h2 {
     font-size: 1.2em;
   }
-  
   .skilldesc {
     width: 85%;
   }
-  
   .flexchart {
-    width:150px;
+    width: 150px;
   }
-  
   header ul li {
-    padding: 0 5px; 
+    padding: 0 5px;
   }
-  
-    header ul li:hover {
-  padding: 0px 5px;
+  header ul li:hover {
+    padding: 0px 5px;
   }
-  
-    section {
-  box-shadow: 0px -5px 3px rgba(0,0,0,0.3);
+  section {
+    box-shadow: 0px -5px 3px rgba(0, 0, 0, 0.3);
   }
-  
-  
 }
